--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,7 +49,7 @@ body {
 
 body::after {
   content: "";
-  background: url('fireworks_background.jpeg');
+  background: url('images/fireworks_background.jpeg');
   background-size: cover;
   opacity: 0.05;
   top: 0;
@@ -188,7 +188,7 @@ a.no-underline:hover {
   height: 20px;
   margin-top: 15px;
   border-radius: 5px;
-  background: url('search.png') no-repeat scroll 0 0;
+  background: url('../../../public/images/search.png') no-repeat scroll 0 0;
   background-color: #fff;
   background-size: cover;
 }
