--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -49,7 +49,7 @@ body {
 
 body::after {
   content: "";
-  background: ActionController::Base.helpers.asset_path('images/fireworks_background.jpeg');
+  background-image: asset-data-url('fireworks_background.jpeg');
   background-size: cover;
   opacity: 0.05;
   top: 0;
@@ -124,7 +124,7 @@ a.no-underline:hover {
 /* --- HEADER --- */
 
 .header {
-  background-image: url('header_stars.png');
+  background-image: asset-data-url('header_stars.png');
   background-color: #003264;
   margin-top: 1px;
 }
@@ -188,7 +188,7 @@ a.no-underline:hover {
   height: 20px;
   margin-top: 15px;
   border-radius: 5px;
-  background: ActionController::Base.helpers.asset_path('images/search.png') no-repeat scroll 0 0;
+  background-image: asset-data-url('search.png') no-repeat scroll 0 0;
   background-color: #fff;
   background-size: cover;
 }
