--- a/app/views/businesses/_business.html.erb
+++ b/app/views/businesses/_business.html.erb
@@ -29,10 +29,12 @@
     <%= business.phone_number %>
   </div>
 
-  <div class="biz-review">
-    <img src="<%= asset_path(business.reviews.last.author.avatar.url(:mini)) %>">
-    <div class="biz-review-content">
-      <%= business.reviews.last.content[0..100] %>...
+  <% if business.reviews.length > 0 %>
+    <div class="biz-review">
+        <img src="<%= asset_path(business.reviews.last.author.avatar.url(:mini)) %>">
+      <div class="biz-review-content">
+        <%= business.reviews.last.content[0..100] %>...
+      </div>
     </div>
-  </div>
+  <% end %>
 </div>
