--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -324,9 +324,11 @@ a.no-underline:hover {
   width: 860px;
   padding: 20px;
   margin: auto;
-  background: #fff;
+  background: #ccc;
   font-weight: bold;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #fff;
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
 }
 
 /* --- CONTENT --- */
@@ -336,8 +338,8 @@ a.no-underline:hover {
   padding: 20px;
   margin: auto;
   background: #fff;
-  border-left: 1px solid #ccc;
-  border-right: 1px solid #ccc;
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
   border-bottom: 1px solid #ccc;
 }
 
@@ -454,6 +456,10 @@ a.no-underline:hover {
   font-weight: bold;
   border-bottom: 2px solid #ccc;
   border-radius: 5px;
+}
+
+.review-form > .form-buttons > input[type="submit"]:hover {
+  background: #333;
 }
 
 .review-form > .form-buttons > a {
