--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,7 +13,7 @@
 
         <div class="post-form-input">
           <label for="near">Near</label>
-          <input type="text" id="near" name="query[near]" value="<%=  %>">
+          <input type="text" id="near" name="query[near]" value="<%= current_user.location if current_user && current_user.location %>">
         </div>
 
         <div class="post-form-submit">
@@ -42,7 +42,7 @@
     <div class="header-buttons">
       <% if current_user %>
         <div class="header-user-thumb">
-          <img src="<%= asset_path(current_user.avatar.url(:mini)) %>">
+          <img src="<%= current_user.avatar.url(:mini) %>">
         </div>
         <ul class="header-dropdown">
           <li><a class="no-underline" href="<%= user_url current_user %>">
