--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -436,7 +436,7 @@ a.no-underline:hover {
   display: block;
   margin-top: 10px;
   margin-bottom: 10px;
-  padding: 5px 0;
+  padding: 5px;
 }
 
 .review-form > textarea:hover {
