Fix User Update Profile Link, Hide Business Buttons not implemented, Add Add Business Button to Header

--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -11,9 +11,9 @@
         <%= button_to "Write a Review", new_business_review_url(@business), class: "write-review", method: :get, class: "biz-review-button" %>
       </li>
 
-      <li><%= button_to "Add Photo", root_url, class: "biz-button" %></li>
+<!--       <li><%= button_to "Add Photo", root_url, class: "biz-button" %></li>
       <li><%= button_to "Share", root_url, class: "biz-button" %></li>
-      <li><%= button_to "Bookmark", root_url, class: "biz-button" %></li>
+      <li><%= button_to "Bookmark", root_url, class: "biz-button" %></li> -->
     </ul>
 
     <% if @business.owner == current_user %>
