--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -33,8 +33,12 @@
               About Me</a></li>
           <% end %>
 
-          <li><a class="no-underline" href="<%= search_url %>">
-            Write a Review</a></li>
+          <li>
+            <a class="no-underline" href="<%= search_url %>">Write a Review</a>
+          </li>
+          <li>
+            <a class="no-underline" href="<%= new_business_url %>">Add a Business</a>
+          </li>
         </ul>
       </nav>
     </div>
